scripts/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amd-service
spec:
  selector:
    app.kubernetes.io/name: amd
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
