scripts/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amd-service-ingress
  namespace: appviamaps 
  annotations:
    cert-manager.io/cluster-issuer: "prod-le-dns01" 
spec:
  ingressClassName: external
  rules:
  - host: am.wss-aks-3.apps.staging.wf.appvia.io 
    http:
      paths:
      - backend:
          service:
            name: amd-service
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - am.wss-aks-3.apps.staging.wf.appvia.io
    secretName: amd-service-ingress-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: amd-service-ingress
  namespace: appviamaps
spec:
  ingress:
    - ports:
        - protocol: TCP
          port: 9000
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
  podSelector: 
    matchLabels:
      app.kubernetes.io/name: "amd"
  policyTypes:
    - Ingress
